--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,6 @@
-# config.yml
-
 backend:
   name: git-gateway
-  branch: main # Branch to update (optional; defaults to master)
+  branch: # Branch to update (optional; defaults to master)
 media_folder: 'assets/uploads'
 collections:
   - name: 'blog'
