--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -24,8 +24,7 @@ front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
 build:
-  preview_env:
-  - JEKYLL_ENV=staging
+  preview_env: JEKYLL_ENV=staging
   preview_output_directory: _site
   install_dependencies_command: bundle install --path vendor/bundle && npm install
   preview_docker_image: forestryio/ruby:2.6-node12
