--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -1,32 +1,30 @@
 ---
 ---
-
----
 new_page_extension: md
 auto_deploy: false
-admin_path: 
-webhook_url: 
+admin_path:
+webhook_url:
 sections:
-- type: jekyll-posts
-  label: Posts
-  create: all
-  match: "**/*"
-- type: directory
-  path: _uploads
-  label: Uploads
-  create: all
-  match: "**/*"
-- type: jekyll-pages
-  label: Pages
-  create: all
+  - type: jekyll-posts
+    label: Posts
+    create: all
+    match: "**/*"
+  - type: directory
+    path: _uploads
+    label: Uploads
+    create: all
+    match: "**/*"
+  - type: jekyll-pages
+    label: Pages
+    create: all
 upload_dir: uploads
 public_path: "/uploads"
-front_matter_path: ''
+front_matter_path: ""
 use_front_matter_path: false
 file_template: ":filename:"
 build:
   preview_env:
-  - JEKYLL_ENV=staging
+    - JEKYLL_ENV=staging
   preview_output_directory: _site
   install_dependencies_command: bundle install --path vendor/bundle && npm install
   preview_docker_image: forestryio/ruby:2.6-node12
