--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "build:production": "cross-env NODE_ENV=production gulp",
-    "build:dev": "cross-env NODE_ENV=development gulp",
+    "build:dev": "cross-env NODE_ENV=development",
     "build": "npm run build:production",
     "dev": "cross-env NODE_ENV=development gulp serve",
     "start": "npm run dev"
