--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "scripts": {
     "build:production": "cross-env NODE_ENV=production gulp",
     "build:dev": "cross-env NODE_ENV=development gulp",
-    "build:forestry": "cross-env NODE_ENV=development gulp forestry",
+    "build:forestry": "cross-env NODE_ENV=development gulp",
     "build": "npm run build:production",
     "dev": "cross-env NODE_ENV=development gulp serve",
+    "forestry": "cross-env NODE_ENV=development gulp forestry",
     "start": "npm run dev"
   },
   "repository": {
